src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : ForeachStmt
  29       | OCStmt ';'
  30       | GuardedStmt
  31       | VariableDef
  32       | SimpleStmt ';'
  33       | IfStmt
  34       | WhileStmt
  35       | ForStmt
  36       | ReturnStmt ';'
  37       | PrintStmt ';'
  38       | BreakStmt ';'
  39       | StmtBlock

  40  ForeachStmt : FOREACH '(' BoundVariable IN Expr ')' Stmt
  41              | FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt

  42  BoundVariable : VAR IDENTIFIER
  43                | Type IDENTIFIER

  44  GuardedStmt : IF '{' IfBranchG IfStmtG '}'
  45              | IF '{' '}'

  46  IfBranchG : IfBranchG IfStmtG DIVIDER
  47            |

  48  IfStmtG : Expr ':' Stmt

  49  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  50  SimpleStmt : LValue '=' Expr
  51             | Call
  52             |

  53  Receiver : Expr '.'
  54           |

  55  LValue : VAR IDENTIFIER
  56         | Receiver IDENTIFIER
  57         | Expr '[' Expr ']'

  58  Call : Receiver IDENTIFIER '(' Actuals ')'

  59  BoolExpr : Expr

  60  Expr : '[' Expr FOR IDENTIFIER IN Expr ']'
  61       | '[' Expr FOR IDENTIFIER IN Expr IF BoolExpr ']'
  62       | Expr ARRAY_REPEAT Constant
  63       | Expr ARRAY_CONCAT Expr
  64       | Expr '[' Expr ':' Expr ']'
  65       | Expr '[' Expr ']' DEFAULT Expr
  66       | LValue
  67       | Call
  68       | Constant
  69       | Expr '+' Expr
  70       | Expr '-' Expr
  71       | Expr '*' Expr
  72       | Expr '/' Expr
  73       | Expr '%' Expr
  74       | Expr EQUAL Expr
  75       | Expr NOT_EQUAL Expr
  76       | Expr '<' Expr
  77       | Expr '>' Expr
  78       | Expr LESS_EQUAL Expr
  79       | Expr GREATER_EQUAL Expr
  80       | Expr AND Expr
  81       | Expr OR Expr
  82       | '(' Expr ')'
  83       | '-' Expr
  84       | '!' Expr
  85       | READ_INTEGER '(' ')'
  86       | READ_LINE '(' ')'
  87       | THIS
  88       | NEW IDENTIFIER '(' ')'
  89       | NEW Type '[' Expr ']'
  90       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  91       | '(' CLASS IDENTIFIER ')' Expr

  92  Constant : ArrayConstant
  93           | LITERAL
  94           | NULL

  95  ArrayConstant : '[' ']'
  96                | '[' ArrayInsider ']'

  97  ArrayInsider : ArrayInsider ',' Constant
  98               | Constant

  99  Actuals : ExprList
 100          |

 101  ExprList : ExprList ',' Expr
 102           | Expr

 103  WhileStmt : WHILE '(' Expr ')' Stmt

 104  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 105  BreakStmt : BREAK

 106  IfStmt : IF '(' Expr ')' Stmt ElseClause

 107  ElseClause : ELSE Stmt
 108             |

 109  ReturnStmt : RETURN Expr
 110             | RETURN

 111  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (52)
	Receiver : .  (54)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	SCOPY  shift 66
	FOREACH  shift 67
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	'{'  shift 48
	'}'  shift 73
	IDENTIFIER  reduce 54
	';'  reduce 52

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	ForeachStmt  goto 77
	OCStmt  goto 78
	GuardedStmt  goto 79
	SimpleStmt  goto 80
	IfStmt  goto 81
	WhileStmt  goto 82
	ForStmt  goto 83
	ReturnStmt  goto 84
	PrintStmt  goto 85
	BreakStmt  goto 86
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 53
	Constant : NULL .  (94)

	.  reduce 94


state 54
	Expr : THIS .  (87)

	.  reduce 87


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (103)

	'('  shift 93
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (104)

	'('  shift 94
	.  error


state 57
	GuardedStmt : IF . '{' IfBranchG IfStmtG '}'  (44)
	GuardedStmt : IF . '{' '}'  (45)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (106)

	'('  shift 95
	'{'  shift 96
	.  error


state 58
	ReturnStmt : RETURN . Expr  (109)
	ReturnStmt : RETURN .  (110)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54
	';'  reduce 110

	Expr  goto 97
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 59
	BreakStmt : BREAK .  (105)

	.  reduce 105


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (88)
	Expr : NEW . Type '[' Expr ']'  (89)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 100
	.  error

	Type  goto 101


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (111)

	'('  shift 102
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (85)

	'('  shift 103
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (86)

	'('  shift 104
	.  error


state 64
	Constant : LITERAL .  (93)

	.  reduce 93


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (90)

	'('  shift 105
	.  error


state 66
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (49)

	'('  shift 106
	.  error


state 67
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr ')' Stmt  (40)
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr WHILE Expr ')' Stmt  (41)

	'('  shift 107
	.  error


state 68
	LValue : VAR . IDENTIFIER  (55)

	IDENTIFIER  shift 108
	.  error


state 69
	Expr : '-' . Expr  (83)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 109
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 70
	Expr : '!' . Expr  (84)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 110
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 71
	Expr : '(' . Expr ')'  (82)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (91)
	Receiver : .  (54)

	CLASS  shift 111
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 112
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 72
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (60)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF BoolExpr ']'  (61)
	ArrayConstant : '[' . ']'  (95)
	ArrayConstant : '[' . ArrayInsider ']'  (96)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	']'  shift 113
	IDENTIFIER  reduce 54

	Expr  goto 114
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 115
	ArrayConstant  goto 92
	ArrayInsider  goto 116


state 73
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 74
	Stmt : VariableDef .  (31)

	.  reduce 31


state 75
	Stmt : StmtBlock .  (39)

	.  reduce 39


state 76
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 77
	Stmt : ForeachStmt .  (28)

	.  reduce 28


state 78
	Stmt : OCStmt . ';'  (29)

	';'  shift 117
	.  error


state 79
	Stmt : GuardedStmt .  (30)

	.  reduce 30


state 80
	Stmt : SimpleStmt . ';'  (32)

	';'  shift 118
	.  error


state 81
	Stmt : IfStmt .  (33)

	.  reduce 33


state 82
	Stmt : WhileStmt .  (34)

	.  reduce 34


state 83
	Stmt : ForStmt .  (35)

	.  reduce 35


state 84
	Stmt : ReturnStmt . ';'  (36)

	';'  shift 119
	.  error


state 85
	Stmt : PrintStmt . ';'  (37)

	';'  shift 120
	.  error


state 86
	Stmt : BreakStmt . ';'  (38)

	';'  shift 121
	.  error


state 87
	Receiver : Expr . '.'  (53)
	LValue : Expr . '[' Expr ']'  (57)
	Expr : Expr . ARRAY_REPEAT Constant  (62)
	Expr : Expr . ARRAY_CONCAT Expr  (63)
	Expr : Expr . '[' Expr ':' Expr ']'  (64)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (65)
	Expr : Expr . '+' Expr  (69)
	Expr : Expr . '-' Expr  (70)
	Expr : Expr . '*' Expr  (71)
	Expr : Expr . '/' Expr  (72)
	Expr : Expr . '%' Expr  (73)
	Expr : Expr . EQUAL Expr  (74)
	Expr : Expr . NOT_EQUAL Expr  (75)
	Expr : Expr . '<' Expr  (76)
	Expr : Expr . '>' Expr  (77)
	Expr : Expr . LESS_EQUAL Expr  (78)
	Expr : Expr . GREATER_EQUAL Expr  (79)
	Expr : Expr . AND Expr  (80)
	Expr : Expr . OR Expr  (81)

	AND  shift 122
	OR  shift 123
	LESS_EQUAL  shift 124
	GREATER_EQUAL  shift 125
	EQUAL  shift 126
	NOT_EQUAL  shift 127
	ARRAY_REPEAT  shift 128
	ARRAY_CONCAT  shift 129
	'+'  shift 130
	'-'  shift 131
	'*'  shift 132
	'/'  shift 133
	'%'  shift 134
	'>'  shift 135
	'<'  shift 136
	'.'  shift 137
	'['  shift 138
	.  error


state 88
	SimpleStmt : LValue . '=' Expr  (50)
	Expr : LValue .  (66)

	'='  shift 139
	AND  reduce 66
	OR  reduce 66
	LESS_EQUAL  reduce 66
	GREATER_EQUAL  reduce 66
	EQUAL  reduce 66
	NOT_EQUAL  reduce 66
	ARRAY_REPEAT  reduce 66
	ARRAY_CONCAT  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'.'  reduce 66
	'['  reduce 66


state 89
	SimpleStmt : Call .  (51)
	Expr : Call .  (67)

	AND  reduce 67
	OR  reduce 67
	LESS_EQUAL  reduce 67
	GREATER_EQUAL  reduce 67
	EQUAL  reduce 67
	NOT_EQUAL  reduce 67
	ARRAY_REPEAT  reduce 67
	ARRAY_CONCAT  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	'.'  reduce 67
	';'  reduce 51
	')'  reduce 51
	'['  reduce 67


state 90
	LValue : Receiver . IDENTIFIER  (56)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (58)

	IDENTIFIER  shift 140
	.  error


state 91
	Expr : Constant .  (68)

	.  reduce 68


state 92
	Constant : ArrayConstant .  (92)

	.  reduce 92


state 93
	WhileStmt : WHILE '(' . Expr ')' Stmt  (103)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 141
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 94
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (104)
	SimpleStmt : .  (52)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54
	';'  reduce 52

	SimpleStmt  goto 142
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 95
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (106)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 143
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 96
	GuardedStmt : IF '{' . IfBranchG IfStmtG '}'  (44)
	GuardedStmt : IF '{' . '}'  (45)
	IfBranchG : .  (47)

	'}'  shift 144
	NULL  reduce 47
	THIS  reduce 47
	NEW  reduce 47
	READ_INTEGER  reduce 47
	READ_LINE  reduce 47
	LITERAL  reduce 47
	IDENTIFIER  reduce 47
	INSTANCEOF  reduce 47
	VAR  reduce 47
	'-'  reduce 47
	'!'  reduce 47
	'('  reduce 47
	'['  reduce 47

	IfBranchG  goto 145


state 97
	Receiver : Expr . '.'  (53)
	LValue : Expr . '[' Expr ']'  (57)
	Expr : Expr . ARRAY_REPEAT Constant  (62)
	Expr : Expr . ARRAY_CONCAT Expr  (63)
	Expr : Expr . '[' Expr ':' Expr ']'  (64)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (65)
	Expr : Expr . '+' Expr  (69)
	Expr : Expr . '-' Expr  (70)
	Expr : Expr . '*' Expr  (71)
	Expr : Expr . '/' Expr  (72)
	Expr : Expr . '%' Expr  (73)
	Expr : Expr . EQUAL Expr  (74)
	Expr : Expr . NOT_EQUAL Expr  (75)
	Expr : Expr . '<' Expr  (76)
	Expr : Expr . '>' Expr  (77)
	Expr : Expr . LESS_EQUAL Expr  (78)
	Expr : Expr . GREATER_EQUAL Expr  (79)
	Expr : Expr . AND Expr  (80)
	Expr : Expr . OR Expr  (81)
	ReturnStmt : RETURN Expr .  (109)

	AND  shift 122
	OR  shift 123
	LESS_EQUAL  shift 124
	GREATER_EQUAL  shift 125
	EQUAL  shift 126
	NOT_EQUAL  shift 127
	ARRAY_REPEAT  shift 128
	ARRAY_CONCAT  shift 129
	'+'  shift 130
	'-'  shift 131
	'*'  shift 132
	'/'  shift 133
	'%'  shift 134
	'>'  shift 135
	'<'  shift 136
	'.'  shift 137
	'['  shift 138
	';'  reduce 109


state 98
	Expr : LValue .  (66)

	.  reduce 66


state 99
	Expr : Call .  (67)

	.  reduce 67


state 100
	Expr : NEW IDENTIFIER . '(' ')'  (88)

	'('  shift 146
	.  error


state 101
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (89)

	'['  shift 147
	.  error


state 102
	PrintStmt : PRINT '(' . ExprList ')'  (111)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 148
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92
	ExprList  goto 149


state 103
	Expr : READ_INTEGER '(' . ')'  (85)

	')'  shift 150
	.  error


state 104
	Expr : READ_LINE '(' . ')'  (86)

	')'  shift 151
	.  error


state 105
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (90)
	Receiver : .  (54)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 54

	Expr  goto 152
	LValue  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 106
	OCStmt : SCOPY '(' . IDENTIFIER ',' Expr ')'  (49)

	IDENTIFIER  shift 153
	.  error


state 107
	ForeachStmt : FOREACH '(' . BoundVariable IN Expr ')' Stmt  (40)
	ForeachStmt : FOREACH '(' . BoundVariable IN Expr WHILE Expr ')' Stmt  (41)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	VAR  shift 154
	.  error

	Type  goto 155
	BoundVariable  goto 156


state 108
	LValue : VAR IDENTIFIER .  (55)

	.  reduce 55


state 109
	Receiver : Expr . '.'  (53)
	LValue : Expr . '[' Expr ']'  (57)
	Expr : Expr . ARRAY_REPEAT Constant  (62)
	Expr : Expr . ARRAY_CONCAT Expr  (63)
	Expr : Expr . '[' Expr ':' Expr ']'  (64)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (65)
	Expr : Expr . '+' Expr  (69)
	Expr : Expr . '-' Expr  (70)
	Expr : Expr . '*' Expr  (71)
	Expr : Expr . '/' Expr  (72)
	Expr : Expr . '%' Expr  (73)
	Expr : Expr . EQUAL Expr  (74)
	Expr : Expr . NOT_EQUAL Expr  (75)
	Expr : Expr . '<' Expr  (76)
	Expr : Expr . '>' Expr  (77)
	Expr : Expr . LESS_EQUAL Expr  (78)
	Expr : Expr . GREATER_EQUAL Expr  (79)
	Expr : Expr . AND Expr  (80)
	Expr : Expr . OR Expr  (81)
	Expr : '-' Expr .  (83)

	ARRAY_REPEAT  shift 128
	ARRAY_CONCAT  shift 129
	'.'  shift 137
	'['  shift 138
	WHILE  reduce 83
	FOR  reduce 83
	IF  reduce 83
	AND  reduce 83
	OR  reduce 83
	LESS_EQUAL  reduce 83
	GREATER_EQUAL  reduce 83
	EQUAL  reduce 83
	NOT_EQUAL  reduce 83
	':'  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'>'  reduce 83
	'<'  reduce 83
	','  reduce 83
	';'  reduce 83
	')'  reduce 83
	']'  reduce 83

